# Multi-and-Aggregate-Signatures-from-Lattices

./: .gitlab-ci.yml  CMakeLists.User.txt  CMakeLists.txt  PALISADEsignatureConfig.cmake.in  PALISADEsignatureConfigVersion.cmake.in  README.md  Release_Notes.md
src/signature/: CMakeLists.txt
src/signature/examples/: gpv.cpp  latticeSig.cpp
src/signature/include/: gpv.h  signaturecontext.h  signaturecore.h
src/signature/lib/: gpv.cpp  signaturecontext.cpp
src/signature/unittest/: UnitTestGPV.cpp
test/: README.md
test/CMake/: CMakeLists.txt  test_installed_PALISADEsignature.sh
